redux .net test

--- a/Redux.net/Views/Home/Index.cshtml
+++ b/Redux.net/Views/Home/Index.cshtml
@@ -13,7 +13,8 @@
 <div>
     @text
     
-    @Html.ActionLink("brn","ClickUp")
+    @Html.ActionLink("up", "ClickUp")
+    @Html.ActionLink("down","ClickDown")
 
 </div>
 </body>
